syntax = "proto3";
package chain4energy.c4echain.cfedistributor;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "c4e-chain/cfedistributor/sub_distributor.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfedistributor/types";

message DistributionResult {
  repeated Account source = 1;
  Account destination = 2;
  repeated cosmos.base.v1beta1.DecCoin coinSend = 3 [
    (gogoproto.moretags) = "yaml:\"coin_send\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false];
}

message DistributionsResult {
  repeated DistributionResult distributionResult = 1;
}